<resources>
    <string name="photoeditor_name">Photo Studio</string>
    <string name="loading_failure">Photo cannot be loaded</string>
    <string name="saving_failure">Photo cannot be saved</string>
    <string name="photo_saved">Photo saved to %s</string>
    <string name="edited_photo_bucket_name">Edited</string>
    <string name="save_photo">Save edited photo?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">SAVE</string>
    <string name="autofix">Auto-fix</string>
    <string name="crop">Crop</string>
    <string name="crossprocess">Cross-process</string>
    <string name="documentary">Documentary</string>
    <string name="doodle">Doodle</string>
    <string name="duotone">Duo-tone</string>
    <string name="facelift">Face Glow</string>
    <string name="facetan">Face Tan</string>
    <string name="filllight">Fill Light</string>
    <string name="fisheye">Fisheye</string>
    <string name="flip">Flip</string>
    <string name="grain">Film Grain</string>
    <string name="grayscale">B&amp;W</string>
    <string name="highlight">Highlights</string>
    <string name="lomoish">Lomo</string>
    <string name="negative">Negative</string>
    <string name="posterize">Posterize</string>
    <string name="redeye">Red Eye</string>
    <string name="rotate">Rotate</string>
    <string name="saturation">Saturation</string>
    <string name="sepia">Sepia</string>
    <string name="shadow">Shadows</string>
    <string name="sharpen">Sharpen</string>
    <string name="straighten">Straighten</string>
    <string name="temperature">Warmth</string>
    <string name="tint">Tint</string>
    <string name="vignette">Vignette</string>
    <string name="crop_tooltip">Drag markers to crop photo</string>
    <string name="doodle_tooltip">Draw on photo to doodle</string>
    <string name="flip_tooltip">Drag photo to flip it</string>
    <string name="redeye_tooltip">Tap to remove red eyes</string>
    <string name="rotate_tooltip">Drag photo to rotate it</string>
    <string name="straighten_tooltip">Drag photo to straighten it</string>
    <string name="app_name">Gallery</string>
    <string name="gadget_title">Picture frame</string>
    <string name="details_ms">%1$02d:%2$02d</string>
    <string name="details_hms">%1$d:%2$02d:%3$02d</string>
    <string name="movie_view_label">Video player</string>
    <string name="loading_video">Loading video…</string>
    <string name="loading_image">Loading image…</string>
    <string name="loading_account">Loading account…</string>
    <string name="resume_playing_title">Resume video</string>
    <string name="resume_playing_message">Resume playing from %s ?</string>
    <string name="resume_playing_resume">Resume playing</string>
    <string name="loading">Loading…</string>
    <string name="loading_thumbnail">Downloading thumbnail</string>
    <string name="loading_will_cost">Downloading thumbnail (About %1$dK)</string>
    <string name="fail_to_load">"Couldn't load"</string>
    <string name="no_thumbnail">No thumbnail</string>
    <string name="resume_playing_restart">Start over</string>
    <string name="crop_save_text">Save</string>
    <string name="multiface_crop_help">Touch a face to begin.</string>
    <string name="saving_image">Saving picture…</string>
    <string name="save_error">"Couldn't save cropped image."</string>
    <string name="crop_label">Crop picture</string>
    <string name="select_image">Select photo</string>
    <string name="select_video">Select video</string>
    <string name="select_item">Edit mode</string>
    <string name="select_album">Edit mode</string>
    <string name="select_group">Select group</string>
    <string name="set_image">Set picture as</string>
    <string name="camera_setas_wallpaper">Wallpaper</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete">Are you sure to delete %s items?</string>
    <string name="cancel">Cancel</string>
    <string name="share">Share</string>
    <string name="select_all">Select all</string>
    <string name="deselect_all">Deselect all</string>
    <string name="slideshow">Slideshow</string>
    <string name="details">Details</string>
    <string name="details_title">%1$d of %2$d items:</string>
    <string name="close">Close</string>
    <string name="switch_to_camera">Switch to Camera</string>
    <string name="show_on_map">Show on map</string>
    <string name="no_map_app">No map application</string>
    <string name="rotate_left">Rotate left</string>
    <string name="rotate_right">Rotate right</string>
    <string name="no_such_item">"Couldn't find item."</string>
    <string name="edit">Edit</string>
    <string name="activity_not_found">No app is available to complete the action.</string>
    <string name="process_caching_requests">Processing caching requests</string>
    <string name="caching_label">Caching…</string>
    <string name="crop_action">Crop</string>
    <string name="set_as">Set as</string>
    <string name="video_err">"Can't play video."</string>
    <string name="group_by_location">By location</string>
    <string name="group_by_time">By time</string>
    <string name="group_by_tags">By tags</string>
    <string name="group_by_faces">By people</string>
    <string name="group_by_album">By album</string>
    <string name="group_by_size">By size</string>
    <string name="untagged">Untagged</string>
    <string name="no_location">No location</string>
    <string name="no_connectivity">"Some locations couldn't be identified due to network problems."</string>
    <string name="sync_album_error">Failed to download the photos in this album. Please retry later.</string>
    <string name="sync_album_set_error">Failed to download the list of albums. Please retry later.</string>
    <string name="show_images_only">Images only</string>
    <string name="show_videos_only">Videos only</string>
    <string name="show_all">Images and videos</string>
    <string name="appwidget_title">Photo Gallery</string>
    <string name="appwidget_empty_text">No photos.</string>
    <string name="crop_saved">Cropped image saved to Downloads.</string>
    <string name="crop_not_saved">"Cropped image wasn't saved."</string>
    <string name="no_albums_alert">No albums available.</string>
    <string name="empty_album">O images/videos available.</string>
    <string name="picasa_posts">Posts</string>
    <string name="make_available_offline">Make available offline</string>
    <string name="sync_picasa_albums">Refresh</string>
    <string name="sd_explorer">Storage devices</string>
    <string name="cloud_albums">Cloud albums</string>
    <string name="home_my_captured_items">my captured photo(s)</string>
    <string name="all_media">All photos</string>
    <string name="done">Done</string>
    <string name="sequence_in_set">%1$d of %2$d items:</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="path">Path</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="orientation">Orientation</string>
    <string name="duration">Duration</string>
    <string name="mimetype">MIME type</string>
    <string name="file_size">File size</string>
    <string name="maker">Maker</string>
    <string name="model">Model</string>
    <string name="flash">Flash</string>
    <string name="aperture">Aperture</string>
    <string name="focal_length">Focal Length</string>
    <string name="white_balance">White balance</string>
    <string name="exposure_time">Exposure time</string>
    <string name="iso">ISO</string>
    <string name="unit_mm">mm</string>
    <string name="manual">Manual</string>
    <string name="auto">Auto</string>
    <string name="flash_on">Flash fired</string>
    <string name="flash_off">No flash</string>
    <string name="try_to_set_local_album_available_offline">This item is stored locally and available offline.</string>
    <string name="set_label_all_albums">All albums</string>
    <string name="set_label_local_albums">Local albums</string>
    <string name="cloud_media_set_set">Cloud albums</string>
    <string name="set_label_mtp_devices">MTP devices</string>
    <string name="set_label_picasa_albums">Picasa albums</string>
    <string name="free_space_format">%s free</string>
    <string name="size_below">%1$s or below</string>
    <string name="size_above">%1$s or above</string>
    <string name="size_between">%1$s to %2$s</string>
    <string name="Import">Import</string>
    <string name="import_complete">Import complete</string>
    <string name="import_fail">Import unsuccessful</string>
    <string name="camera_connected">Camera connected.</string>
    <string name="camera_disconnected">Camera disconnected.</string>
    <string name="click_import">Touch here to import</string>
    <string name="widget_type_album">Choose an album</string>
    <string name="widget_type_shuffle">Shuffle all images</string>
    <string name="widget_type_photo">Choose an image</string>
    <string name="widget_type">Choose images</string>
    <string name="slideshow_dream_name">Slideshow</string>
    <string name="albums">Albums</string>
    <string name="times">Times</string>
    <string name="locations">Locations</string>
    <string name="set_recent_album">Set as Favorite Album</string>
    <string name="remove_recent_album">Remove from Favorite Albums</string>
    <string name="set_hidden_album">Hidden Album</string>
    <string name="remove_hidden_album">Unhide Album</string>
    <string name="all_album">All</string>
    <string name="all_recent">Favorite</string>
    <string name="no_recent_album">You can put commonly used albums as favorite for quick viewing.</string>
    <string name="tab_lockscreen_text">Lock Screen Wallpaper</string>
    <string name="tab_wallpaper_text">Home Screen Wallpaper</string>
    <string name="tab_all_text">Set All</string>
    <string name="account_not_login">You can login to your Xiaomi account and sync to your cloud. This will automatically upload mobile pictures to cloud management for better convenience.</string>
    <string name="open_sync">Sync Now</string>
    <string name="alert_message_initial_cloud">The system will automatically upload new and past photos and screenshots only where there is WLAN connection.</string>
    <string name="cloud_gallery_no_pictures">No pictures contained in your cloud album.</string>
    <string name="modify_cloud_settings">Modify cloud settings</string>
    <string name="unknown_location">Unknown location</string>
    <string name="other_category">Other Settings</string>
    <string name="show_hidden_album">Show Hidden Album(s)</string>
    <string name="auto_create_recent_album">Auto Create Favorite Album(s)</string>
    <string name="auto_create_recent_album_over_ten_times">Auto create favorite album(s) when album is opened more than ten times</string>
    <string name="slideshow_category">Slideshow</string>
    <string name="slideshow_interval">Slideshow time interval</string>
    <string name="slideshow_interval_dialog_title">Slideshow time interval must be greater than 0 seconds</string>
    <string name="slideshow_repeat_mode">Repeat</string>
    <string name="clear_thumbnail_cache">Clear Thumbnail Cache</string>
    <string name="clear_thumbnail_cache_summary">Browsing will generate thumbnails. Clear the cache can increase the space.</string>
    <string name="operation_rename">Rename</string>
    <string name="file_info_title">Title:</string>
    <string name="file_info_path">Path:</string>
    <string name="file_info_geo_location">Location:</string>
    <string name="file_info_size">Size:</string>
    <string name="file_info_dimension">Resolution:</string>
    <string name="file_info_create_time">Created:</string>
    <string name="file_info_duration">Duration:</string>
</resources>