<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/slideshow_category">
        <EditTextPreference android:title="@string/slideshow_interval" android:key="slideshow_interval" android:defaultValue="2" android:dialogTitle="@string/slideshow_interval_dialog_title" />
        <CheckBoxPreference android:title="@string/slideshow_repeat_mode" android:key="slideshow_repeat_mode" android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/other_category" android:key="other_settings">
        <CheckBoxPreference android:title="@string/show_hidden_album" android:key="show_hidden_album" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/auto_create_recent_album" android:key="auto_create_recent_album" android:summary="@string/auto_create_recent_album_over_ten_times" android:defaultValue="false" />
        <Preference android:persistent="false" android:title="@string/clear_thumbnail_cache" android:key="clear_thumbnail_cache" android:summary="@string/clear_thumbnail_cache_summary" />
    </PreferenceCategory>
</PreferenceScreen>